# librepods-gnome

./: .gitignore  CREDITS  README.md  install.sh
daemon/: meson.build
daemon/data/: librepods-daemon.service  org.librepods.Daemon.service
daemon/src/: aap_protocol.c  aap_protocol.h  airpods_state.c  airpods_state.h  bluetooth.c  bluetooth.h  bluez_monitor.c  bluez_monitor.h  config.c  config.h  dbus_service.c  dbus_service.h  main.c  media_control.c  media_control.h
extension/: extension.js  metadata.json  prefs.js  stylesheet.css
extension/schemas/: gschemas.compiled  org.gnome.shell.extensions.librepods.gschema.xml
